# crack

./: build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/jtduan/crack/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp  native-lib.cpp.bak
app/src/main/cpp/one/: CMakeLists.txt  native-lib.cpp
app/src/main/include/: native_hook.h
app/src/main/java/cn/jtduan/crack/: DeviceService.java  MainActivity.java  NativeAPI.java
app/src/main/java/cn/jtduan/crack/sandhook/: SandHookDemo.java
app/src/main/java/cn/jtduan/crack/whale/: WhaleHookDemo.java
app/src/main/java/com/weibo/xvideo/: NativeApi.java
app/src/main/java/com/yxcorp/gifshow/util/: CPU.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/cn/jtduan/crack/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
